Create sensor, list sensors
